Fix DeoptimizeRelocatedNMethod